--- a/tp3/node-server/pom.xml
+++ b/tp3/node-server/pom.xml
@@ -7,6 +7,7 @@
         <groupId>fr.sciam</groupId>
         <artifactId>tp3</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>node-server</artifactId>
