--- a/tp3/pom.xml
+++ b/tp3/pom.xml
@@ -7,6 +7,7 @@
     <groupId>fr.sciam</groupId>
     <artifactId>quarkus-ignite-lab</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>tp3</artifactId>
