--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -17,6 +17,7 @@ tasks:
 vscode:
     extensions:
         - vscjava.vscode-java-pack
+        - redhat.java
         - asciidoctor.asciidoctor-vscode
         - anwar.papyrus-pdf
         - redhat.vscode-quarkus
