--- a/tp1-2/pom.xml
+++ b/tp1-2/pom.xml
@@ -19,6 +19,10 @@
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-openapi</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
       <artifactId>quarkus-container-image-jib</artifactId>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
